# modelLoader

./: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  README.md  TODO.txt  bone.cpp  build.sh  debug.cap  glad.c  imgui.ini  load  log  main.cpp  makefile  makefile1  mesh.cpp  mesh.h  model.cpp  run.sh  shader.cpp  stb_image.c
headers/: animation.h  animator.h  animdata.h  bone.h  camera.h  camera.hpp  cubemap.h  datastructure.h  frambuffer.h  light.h  mesh.h  mesh.hpp  model.h  model.hpp  mymath.h  scene.h  shader.h  shader.hpp  timer.h  ubo.h
headers/libs/: assimp_glm_helpers.h
headers/libs/glad/: CMakeLists.txt  glad.c  glad.h
headers/libs/imgui/: CMakeLists.txt
headers/libs/stbi/: CMakeLists.txt
shaders/: bone.frag  bone.vert  fragmentLightS  fragmentShader  fragmentShader1  framebuffer.vert  frmebufferfs  light.frag  lineFragShader  lineShader.vert  main.vert  outliner.vert  outlinerfs  outlinervs  skybox.frag  skybox.vert  skyboxfs  skyboxvs  vertexLightS  vertexShader  vertexShader1
src/: bone.cpp  cubemap.cpp  datastructure.cpp  glad.c  main.cpp  mesh.cpp  model.cpp  scene.cpp  shader.cpp  stb_image.c  ubo.cpp
